# Phantom_LibRec

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: windows-msvc-static.yml
src/: curl_demo.cpp  fmt_demo.cpp  main.cpp  openssl_demo.cpp  qt_demo.cpp  spdlog_demo.cpp  zlib_demo.cpp
